--- a/style.css
+++ b/style.css
@@ -8,21 +8,44 @@
   }
 
   .wrapper {
-    display: flex;
+
+
     justify-content: center;
-    align-items: center;
+
     height: 100%;
-    text-align: center;
+
     width: 100%;
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+  }
 
-
+  p{
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 15px;
+    border-radius: 10px;
+    max-width: 600px;
+    margin-top: 500px; /* Adjust this value as needed */
   }
 h2{
     color: #fff;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
+    min-width: 50%;
+    position: absolute;
+    
+}
+#slideCategory{
+  color: #fff;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 1.5);
+  min-width: 50%;
+  position: absolute;
+  margin-top: 100px;
+  
 }
 body{
     margin: 0;
@@ -30,7 +53,12 @@ body{
 
 }
 
-
+header {
+  padding: 0.5rem;
+  width: 100%;
+  color: white;
+  background-color: black;
+}
 
 form {
     flex-basis: 100%;
@@ -65,7 +93,10 @@ form {
   form button:hover {
     background-color: #23527c;
   }
-
+  #fsButton{
+    margin-top: 10%;
+    width: 10%;
+  }
   .arrow {
     position: absolute;
     top: 50%;
@@ -84,4 +115,22 @@ form {
   
   #nextButton {
     right: 20px;
+  }
+
+  #tile {
+    display: flex;
+    overflow-x: auto;
+    margin: 1rem 0;
+    max-width: calc(100vw - 2rem);
+  }
+  
+  #tile img {
+    flex: 0 1 auto;
+    height: 150px;
+    margin-right: 0.5rem;
+    cursor: pointer;
+  }
+  
+  #tileimg:last-child {
+    margin-right: 0;
   }
